added docker config
