# src/models/ChannelSelection.ts
@@ -1,0 +1,7 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+export type ChannelSelection = {
+  provider?: 'whatsapp' | 'abc' | 'rbc';
+};
