# src/models/MessageRequest.ts
@@ -2,13 +2,14 @@
 /* tslint:disable */
 /* eslint-disable */
 
+import type { ChannelSelection } from './ChannelSelection';
 import type { MediaPayload } from './MediaPayload';
 import type { ParameterPayload } from './ParameterPayload';
 import type { TextPayload } from './TextPayload';
+import type { WhatsAppRecipient } from './WhatsAppRecipient';
 
 export type MessageRequest = {
-  to: string;
-  type: 'text' | 'media';
-  provider: string;
+  channel: ChannelSelection;
+  recipient?: WhatsAppRecipient;
   payload: Array<TextPayload | MediaPayload | ParameterPayload>;
 };
