# src/models/WhatsAppRecipient.ts
@@ -1,0 +1,7 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+export type WhatsAppRecipient = {
+  contact_id: string;
+};
